--- a/Gamestar_Explore_News.ipynb
+++ b/Gamestar_Explore_News.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "# Imprort aller benötigten Libraries\n",
+    "# Import aller benötigten Libraries\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
